static/css/style.css
:root {
    --rose-ebony: #63474dff;
    --rebecca-purple: #73409dff;
    --new-york-pink: #e09186ff;
    --mellow-apricot: #ffbf7dff;
    --yellow-orange-color-wheel: #fe9b29ff;
    --madder-lake: #c1403aff;
    --onyx: #353935;
    --matte-black: #28282B;
}

html,
body {
    max-width: 100%;
    min-height: 100%;
    overflow: visible;
    scroll-behavior: smooth;
    font-family: 'Roboto', sans-serif;
    background-color: var(--matte-black);
}

.body-overlay {
    width: 100%;
    min-height: 100%;
    position:absolute;
    z-index: 1;
    background-color: var(--onyx);
    opacity: 0.4;
}

.top-layer {
    position: absolute;
    z-index: 2;
}

a {
    cursor: pointer;
    text-decoration: none;
}

/*----------------------------------------------------------- Nav */

header {
    border-top: 4px outset var(--new-york-pink);
}

.nav-wrapper {
    padding-top: 10px;
}

.nav-bg {
    background-color: var(--matte-black);
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
    transition: all 0.2s ease-in-out;
}

.navbar-brand {
    height: 70px;
    width: 300px;
    background: url('/static/img/design/logo-no-background.svg') no-repeat center center;
    background-size: contain;
}

.navbar-nav .nav-link a {
    color: white;
    font-size: 18px;
    font-weight: 500;
    text-shadow: 1px 1px 1px var(--matte-black);
    text-transform: uppercase;
    text-decoration: none;
}

.nav-social li {
    width: 40px;
    height: 40px;
    margin-right: 5px;
    border: 1px solid white;
    border-radius: 50%;

    position: relative;
}

.nav-social li a {
    padding: 17px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.navbar-nav .nav-link a:hover,
.nav-social li a:hover,
.nav-social li:hover,
.nav-social li:hover a {
    color: var(--yellow-orange-color-wheel);
    border-color: var(--yellow-orange-color-wheel);
    transition: all 0.2s ease-in-out;
}

.tooltip-inner {
    background-color: var(--new-york-pink);
    margin-top: 10px;
    text-shadow: 1px 1px 1px var(--matte-black);
}

.dropdown-menu {
    background-color: whitesmoke;
    border-radius: 8px;
}

.dropdown-menu li a {
    color: black !important;
    text-transform: lowercase !important;
    text-transform: capitalize !important;
    text-shadow: none !important;
}

.dropdown-menu li:hover a {
    background-color: var(--mellow-apricot);
}

/* mobile nav view */

.mobile-nav-container {
    background-color: var(--matte-black);
    border-top-left-radius: 20%;
    border-top-right-radius: 20%;
    border-top: 2px outset var(--mellow-apricot);
    padding-top: 15px;

}

.mobile-nav-view {
    list-style-type: none;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.mobile-nav-view li,
.mobile-nav-view li a,
.mobile-nav-view li button,
.mobile-nav-view li a i {
    font-size: 22px;
    color: white;
    text-shadow: 1px 1px 1px var(--matte-black);
}

#trolley-btn i {
    color: var(--matte-black);
    text-shadow: 1px 1px 1px var(--onyx);
}

.mobile-nav-view li a>i {
    position: relative;
    top: 15px;
}

.trolley-container {
    width: 65px;
    height: 65px;
    border-radius: 50%;
    border: 1px outset var(--madder-lake);
    background: rgb(255, 191, 125);
    background: linear-gradient(90deg, rgba(255, 191, 125, 1) 65%, rgba(115, 64, 157, 1) 98%);
    position: relative;
    top: -10px;
}


.trolley-container:active {
    background: rgb(224, 145, 134);
    background: linear-gradient(90deg, rgba(224, 145, 134, 1) 41%, rgba(115, 64, 157, 1) 98%);
    border: 1px inset var(--madder-lake);
    transition: all 0.5s ease-in-out;
}

#trolley-btn i {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.small-search {
    transition: all 0.2s ease-in-out;
}

.fs-12 {
    font-size: 12px;
    font-weight: 300;
}

/* ham menu */
.navbar-toggler {
    width: 55px;
    height: 55px;
    border: 2px outset var(--mellow-apricot);
    position: relative;
    margin-right: 10px;
}

.ham {
    width: 55px;
    height: 55px;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
    transition: transform 400ms;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.center-svg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hamRotate.active {
    transform: rotate(45deg);
}

.hamRotate180.active {
    transform: rotate(180deg);
}

.line {
    fill: none;
    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
    stroke: white;
    stroke-width: 5;
    stroke-linecap: round;
}

.ham1 .top {
    stroke-dasharray: 40 139;
}

.ham1 .bottom {
    stroke-dasharray: 40 180;
}

.ham1.active .top {
    stroke-dashoffset: -98px;
}

.ham1.active .bottom {
    stroke-dashoffset: -138px;
}


/* end ham menu */


/* -------------------------------------------------------Home */

.home-content,
.home-landing-lg {
    height: 100vh !important;
    width: 100%;
}

.home-content {
    position: absolute;
    z-index: 2;
}

.home-content > .container {
    margin-top: 25vh;
}

.home-landing-lg {
    position: relative;
    overflow: clip !important;
}

#home-bg-slideshow {
    width: 100%;
    height: 100%;
}

.headings {
    font-size: 22px;
}

.headings,
.headings~h2 {
    font-weight: 500;
    text-shadow: 1px 1px 1px var(--matte-black);
    text-transform: uppercase;
    color: white;
}

.headings~h2 {
    font-size: 50px;
}

.border-left {
    border-left: 1px solid var(--onyx);
}

.border-right {
    border-right: 1px solid var(--onyx);
}

.btn-orange {
    background-color: var(--yellow-orange-color-wheel);
    font-size: 20px;
    text-shadow: 1px 1px 1px var(--matte-black);
}

.btn-orange:hover,
.btn-orange:active {
    background-color: var(--mellow-apricot);
}

/* -------------------------------------------------------Footer */

footer {
    background-color: var(--matte-black);
    color: white;
}

footer ul {
    list-style-type: none;
}

footer .footer-links ul li {
    display: inline-block;
    width: 30px;
    height: 30px;
    border: 1px solid white;
    border-radius: 50%;

    position: relative;

    cursor: pointer;
}

footer a,
.footer-links a {
    color: white;
    font-weight: 400;
    font-size: 16px;
}

.footer-links a i {
    font-size: 16px;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

footer ul li a:hover,
footer .footer-links ul li:hover,
footer .footer-links ul li:hover a {
    color: var(--new-york-pink);
    border-color: var(--new-york-pink);
    transition: all 0.2s ease-in-out;
}

footer h4 {
    text-indent: 18px;
    color: var(--mellow-apricot);
}

.copyright:hover {
    color: var(--new-york-pink);
    cursor: pointer;
}

/* -------------------------------------------------------Extras */

/* ----------- Headings */
h1 {
    color: var(--mellow-apricot)
}

/* ------------ Forms */

/* Allauth */

.allauth-container-wrapper {
    position: relative;
    top: 10vh;
}

.allauth-container {
    color: white;
    background-color: var(--matte-black);
    border-radius: 8px;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
    border: 2px outset var(--mellow-apricot);
}

.allauth-container hr {
    color: white;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none !important;
    /* Removes labels from allauth forms */
}

.form-label {
    display: none;
}

/* Google Map */

#google-maps {
    height: 250px;
    width: 100%;
}

/* Messages */

.message-container {
    position: fixed;
    z-index: 4;
}

.alert-dismissible {
    font-size: 18px;
    font-weight: 500;
    color: white;
    text-shadow: 2px 2px 1px var(--matte-black);
    background: rgb(224, 145, 134);
    background: linear-gradient(90deg, rgba(224, 145, 134, 1) 34%, rgba(193, 64, 58, 1) 86%);
}

.btn-close {
    color: var(--matte-black);
}

/* Social Accounts */
.socialaccount_provider i {
    font-size: 30px;
}

.google {
    color: #de5246;
}

.facebook {
    color: #4267B2;
}

.instagram {
    color: #fff;
    vertical-align: middle;
    background: #d6249f;
    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
    box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
    border-radius: 8px;
}

.twitter {
    color: #1DA1F2;
}

/* trolley */

.remove-from-trolley,
.add-to-trolley {
    height: 35px;
    width: 35px;
    border-radius: 50%;
    position: relative;
}

.remove-from-trolley i,
.add-to-trolley i {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/* -------------------------------------------------------Media Queries */
@media only screen and (max-width: 991px) {
    .navbar .nav-link {
        margin-left: 10px;
    }

    .border-left,
    .border-right {
        border: none;
    }

    .home-content>.container {
        margin-top: 20vh;
    }

    .border-left {
        margin-top: 90px;
    }
}

@media only screen and (max-width: 768px){
    .border-left {
        margin-top: 90px;
    }
}

@media only screen and (max-width: 575px) {

    .footer-logo,
    footer p,
    input.subscription,
    input.subscription~button {
        min-width: 100%;
    }

    ul.social-links {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-around;
    }
    
    .border-left {
        margin-top: 45px;
    }
    .btn-orange {
        width: 100%;
    }
}

@media only screen and (max-width: 412px) {
    .navbar-brand {
        width: 250px;
    }

    .footer-logo {
        width: 250px;
    }
    .headings {
        font-size: 14px;
    }

    .headings~h2 {
        font-size: 25px;
    }

    .home-top-link {
        font-size: 12px;
    }

}

@media only screen and (max-width: 375px){


}
@media only screen and (max-width: 363px) {
    .navbar-brand {
        width: 200px;
    }
}

@media only screen and (max-width: 280px){
    .navbar-brand {
        width: 150px;
    }
}

